--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataBase.cpp" />
     <ClCompile Include="EXPOver.cpp" />
     <ClCompile Include="GameServer.cpp" />
     <ClCompile Include="IOCP.cpp" />
@@ -140,6 +141,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataBase.h" />
     <ClInclude Include="EXPOver.h" />
     <ClInclude Include="GameServer.h" />
     <ClInclude Include="IOCP.h" />
