--- a/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj.filters
+++ b/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Engine\stdafx">
       <UniqueIdentifier>{4ace4f42-6d47-41cc-b2e3-88127886ea77}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\Shader">
+      <UniqueIdentifier>{2e496cfb-0032-4d37-9c04-227629dff23f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -126,5 +129,10 @@
     <Image Include="Graduation_Client.ico">
       <Filter>리소스 파일</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shaders.hlsl">
+      <Filter>Engine\Shader</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
