--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="GameServer.cpp" />
     <ClCompile Include="IOCP.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Map_Load.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Room_Manager.cpp" />
     <ClCompile Include="User_Client.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="EXPOver.h" />
     <ClInclude Include="GameServer.h" />
     <ClInclude Include="IOCP.h" />
+    <ClInclude Include="Map_Load.h" />
     <ClInclude Include="protocol.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="Room_Manager.h" />
