server bug fix 2023.03.05(22:06)
- release모드에서 서버 종료되는부분 수정 (메모리 중첩삭제 부분이었음)

추가 고쳐야 할 부분
- room info에 방 제목을 포함하여 보낼시 0번방을 제외 나머지 방 정보는 받지 못함

--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
@@ -116,9 +116,10 @@
       <WarningLevel>Level3</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
