--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
@@ -138,6 +138,8 @@
     <ClCompile Include="object.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Room_Manager.cpp" />
+    <ClCompile Include="Server_SendPacket.cpp" />
+    <ClCompile Include="Update_Session.cpp" />
     <ClCompile Include="User_Client.cpp" />
     <ClCompile Include="Voice_chat.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
