--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="object.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Room_Manager.cpp" />
+    <ClCompile Include="Server_ProcessPacket.cpp" />
     <ClCompile Include="Server_SendPacket.cpp" />
     <ClCompile Include="Update_Session.cpp" />
     <ClCompile Include="User_Client.cpp" />
