--- a/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj
+++ b/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="protocol.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Server_Timer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Graduation_Client.h" />
