커스터마이징 클래스 추가
- 해당부분은 추후 다른 팀원의 커스터마이징 데이터가 추가된 이후 수정될 예정입니다.

- 추가적으로 파일을 일부 분리하였습니다.

--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="Server_Timer.h">
       <Filter>소스 파일\00 Main\Session</Filter>
     </ClInclude>
+    <ClInclude Include="User_Custom.h">
+      <Filter>소스 파일\03 Client</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -130,6 +133,12 @@
     </ClCompile>
     <ClCompile Include="Server_ProcessPacket.cpp">
       <Filter>소스 파일\00 Main\Packet</Filter>
+    </ClCompile>
+    <ClCompile Include="Room_Update_Session.cpp">
+      <Filter>소스 파일\04 Room</Filter>
+    </ClCompile>
+    <ClCompile Include="User_Custom.cpp">
+      <Filter>소스 파일\03 Client</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
