--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
@@ -138,10 +138,12 @@
     <ClCompile Include="object.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Room_Manager.cpp" />
+    <ClCompile Include="Room_Update_Session.cpp" />
     <ClCompile Include="Server_ProcessPacket.cpp" />
     <ClCompile Include="Server_SendPacket.cpp" />
     <ClCompile Include="Update_Session.cpp" />
     <ClCompile Include="User_Client.cpp" />
+    <ClCompile Include="User_Custom.cpp" />
     <ClCompile Include="Voice_chat.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
@@ -159,6 +161,7 @@
     <ClInclude Include="Server_Timer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="User_Client.h" />
+    <ClInclude Include="User_Custom.h" />
     <ClInclude Include="Voice_chat.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
