Server door 처리 구현중

--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
@@ -88,7 +88,7 @@
       <Filter>소스 파일\03 Client</Filter>
     </ClInclude>
     <ClInclude Include="object.h">
-      <Filter>소스 파일\09 Voice</Filter>
+      <Filter>소스 파일\06 Object</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
