--- a/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj.filters
+++ b/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="Server_Timer.h">
       <Filter>Engine</Filter>
     </ClInclude>
+    <ClInclude Include="Game_state.h">
+      <Filter>Engine\Framework</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -202,6 +205,9 @@
     </ClCompile>
     <ClCompile Include="Process_Packet.cpp">
       <Filter>Client\Network</Filter>
+    </ClCompile>
+    <ClCompile Include="Game_state.cpp">
+      <Filter>Engine\Framework</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
