--- a/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj.filters
+++ b/Graduation_Client/Graduation_Client/Graduation_Client.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="Game_state.h">
       <Filter>Engine\Framework</Filter>
     </ClInclude>
+    <ClInclude Include="UI.h">
+      <Filter>Engine\Framework</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -207,6 +210,9 @@
       <Filter>Client\Network</Filter>
     </ClCompile>
     <ClCompile Include="Game_state.cpp">
+      <Filter>Engine\Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="UI.cpp">
       <Filter>Engine\Framework</Filter>
     </ClCompile>
   </ItemGroup>
