--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
@@ -128,9 +128,6 @@
     <ClCompile Include="Server_SendPacket.cpp">
       <Filter>소스 파일\00 Main\Packet</Filter>
     </ClCompile>
-    <ClCompile Include="Update_Session.cpp">
-      <Filter>소스 파일\00 Main\Session</Filter>
-    </ClCompile>
     <ClCompile Include="Server_ProcessPacket.cpp">
       <Filter>소스 파일\00 Main\Packet</Filter>
     </ClCompile>
@@ -139,6 +136,12 @@
     </ClCompile>
     <ClCompile Include="User_Custom.cpp">
       <Filter>소스 파일\03 Client</Filter>
+    </ClCompile>
+    <ClCompile Include="Update_Session.cpp">
+      <Filter>소스 파일\00 Main\Session</Filter>
+    </ClCompile>
+    <ClCompile Include="Server_Timer.cpp">
+      <Filter>소스 파일\00 Main\Session</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
