방이 빈방으로 바뀔경우 조건 추가
플레이중인 방이 빈방으로 변경시 등록된 EVENT의 경우 타이머큐에 계속 넣는것이 아닌 POP하여 제거하도록 수정

--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj.filters
@@ -137,7 +137,7 @@
     <ClCompile Include="User_Custom.cpp">
       <Filter>소스 파일\03 Client</Filter>
     </ClCompile>
-    <ClCompile Include="Update_Session.cpp">
+    <ClCompile Include="Update_Func.cpp">
       <Filter>소스 파일\00 Main\Session</Filter>
     </ClCompile>
     <ClCompile Include="Server_Timer.cpp">
