--- a/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
+++ b/Graduation_Server/Graduation_Server/Graduation_Server.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile Include="Server_ProcessPacket.cpp" />
     <ClCompile Include="Server_SendPacket.cpp" />
     <ClCompile Include="Server_Timer.cpp" />
-    <ClCompile Include="Update_Session.cpp" />
+    <ClCompile Include="Update_Func.cpp" />
     <ClCompile Include="User_Client.cpp" />
     <ClCompile Include="User_Custom.cpp" />
     <ClCompile Include="Voice_chat.cpp">
